# tiny-kanban

./: .gitignore  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  DATABASE_SAFETY.md  MIGRATIONS.md  SAFETY_IMPROVEMENTS.md  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 2026_02_06_2103-07bf63b37417_initial_schema.py  2026_02_10_2232-dba094943a0c_add_due_date_to_cards.py
backend/app/: config.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: archive.py  board_settings.py  cards.py  columns.py  search.py  tags.py
backend/tests/: conftest.py  test_archive.py  test_cards.py  test_columns.py  test_tags.py
frontend/: .env.example  index.html  package-lock.json  package.json  prettier.config.js  vite.config.ts
frontend/src/: index.css  router.tsx
frontend/src/__tests__/: AddCardButton.test.tsx  AddColumnPlaceholder.test.tsx  ConfirmDialog.test.tsx  Sidebar.test.tsx  TagBadge.test.tsx
frontend/src/api/: archive.ts  boardSettings.ts  cards.ts  columns.ts  search.ts  tags.ts
frontend/src/components/board/: AddCardButton.tsx  AddColumnPlaceholder.tsx  BoardContent.tsx  BoardHeader.tsx  ColumnHeader.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useArchive.ts  useColumns.ts  useTags.ts
frontend/src/pages/: ArchivePage.tsx  BoardPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: dateUtils.ts
google_stitch/: README.md  archived_cards.html  dashboard.html
(+4 files in other folders)
